# calendar_matching

./: .env.example  .gitignore  AGENTS.md  DEBUGGING_GUIDE.md  Dockerfile  README.md  app.py  fly.toml  matching.py  planning.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml  deploy-fly.yml
cloud_hosting/: fly_io.md
docs/: product-overview.md  roadmap.md  ui-design-plan.md
docs/features/: agenda-view.md  authentication.md  availability-matching.md  calendar-integrations.md  meeting-options-agreement.md  meeting-requests.md  privacy-anonymization.md  profile-friends-demo.md  storage-abstraction.md
static/css/: style.css
static/html/: account.html  availability.html  dashboard.html  demo_request.html  friends.html  home.html  invite.html  login.html  profile.html  register.html  request_detail.html  requests_new.html
static/js/: app.js  login.js
tests/: test_auth.py  test_deployment_config.py  test_matching_options.py  test_meeting_requests.py  test_profile_friends_demo.py  test_ui_functionality_contract.py  test_ui_routes.py  test_verify_setup.py
