[project]
name = "calendar-matching"
version = "0.1.0"
description = "Google Calendar free/busy data reader for two accounts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.2",
    "uvicorn[standard]==0.31.0",
    "httpx==0.28.1",
    "sqlalchemy==2.0.35",
    "python-dotenv==1.0.1",
    "cryptography==44.0.0",
    "pydantic==2.11.1",
    "pydantic-settings==2.6.1",
]
